# Client-Server

./: CMakeLists.txt  CPSC 5042 Milestone 1 Group 8.docx  README.md
Auth/: Auth.sln
Auth/Auth/: Auth.cpp  Auth.h  Auth.vcxproj
Client/: Client.sln
Client/Client/: Client.vcxproj  client.cpp
Client/Client/Client/: CMakeLists.txt  Client.sln
Client/Client/Client/Client/: Client.cpp  Client.vcxproj
ClientServer/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
ClientServerExample/: client.cpp  server.cpp
Meal Client Server/: CMakeLists.txt  server.cpp
MealTime/ExampleClientServer/: ExampleClientServer.sln
MealTime/ExampleClientServer/ExampleClientServer/: ExampleClientServer.vcxproj  client.cpp  server.cpp
MealTime/MealTime/: MealTime.sln
MealTime/MealTime/Project1/: Project1.vcxproj  client.cpp  server.cpp
Server/: Server.sln
Server/Server/: Auth.cpp  Auth.h  CMakeLists.txt  Makefile  Server.vcxproj  server.cpp
Server/Server/Server/: Server.sln
Server/Server/Server/Server/: Server.vcxproj
TestCS1/: TestCS1.sln
TestCS1/TestCS1/: Hello.cpp  TestCS1.vcxproj
client/Client/: Client.sln
client/Client/Client/: Client.vcxproj  client.cpp  client.h
meal generator/meal generator/: MealGenerator.cpp  MealGenerator.h  main.cpp
meal/meal/: Meal.cpp  Meal.h
server/: server.sln
server/server/: GlobalContext.h  LocalContext.h  Meal.cpp  Meal.h  MealGenerator.cpp  MealGenerator.h  RPCImpl.cpp  RPCImpl.h  RPCServer.cpp  RPCServer.h  main.cpp  server.vcxproj
